--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
   }
   
   #banner {
-    background-image: url('ban.jpg');
+    background: linear-gradient(blue, yellow);
     background-size: cover;
     color: #fff;
     text-align: center;
